REGRESSION (r267761): editing/mac/spelling/autocorrection-contraction.html is a constant timeout on macOS wk2 Debug https://bugs.webkit.org/show_bug.cgi?id=217548

Reviewed by Alexey Proskuryakov.

Tools:

* TestRunnerShared/Bindings/JSBasics.cpp:
(WTR::objectProperty): Use JSValueIsObject instead of JSValueToObject. The latter
function is *very* slow when passed undefined or null, creating an exception object
every time, even when we pass nullptr to indicate that we don't want the exception
object, and also invoking debugging machinery to inform the "inspector" about this
exception, which results in logging to the console while running tests. This
inefficiency is something we can fix in JavaScriptCore if we like, and makes it a
bad idea to call the function on undefined and null. And also points out the problem
with passing exceptions to anyone except the caller: there's no reason the inspector
needs to know about the exception in a case like this. Because the uses of this
function in the test runners don't need that behavior of converting non-object values
to objects, it was best just to stop using JSValueToObject entirely.

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage): Use uint64Value here. Just something
missed in my earlier refactoring and spotted while debugging.

LayoutTests:

* editing/mac/spelling/autocorrection-contraction-expected.html: Added.
* editing/mac/spelling/autocorrection-contraction-expected.png: Removed.
* editing/mac/spelling/autocorrection-contraction-expected.txt: Removed.
* editing/mac/spelling/autocorrection-contraction.html: Simplified this and changed it to a ref test.
* platform/mac-wk2/editing/mac/spelling/autocorrection-contraction-expected.png: Removed.
* platform/mac-wk2/editing/mac/spelling/autocorrection-contraction-expected.txt: Removed.
* platform/win/editing/mac/spelling/autocorrection-contraction-expected.txt: Removed.

* platform/mac/TestExpectations: Remove failure and timeout expectations for autocorrection-contraction.html.
Both because the slowness in WebKitTestRunner causing the timeout issue was fixed, and because the new
reference test is unlikely to be flaky.

* platform/wk2/TestExpectations: Removed timeout expectations for two other tests affected by the same
bug in WebKitTestRunner.

Canonical link: https://commits.webkit.org/230344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268321 268f45cc-cd09-0410-ab3c-d52691b4dbfc